# PortfolioSimulator

./: .gitignore  README.md  Završni rad - plan aktivnosti.docx  sastanak.txt  sastanak1.txt  sastanak2.txt
App/: CMakeLists.txt  build_script.sh
App/datasets/: coin_Apple.csv  re.csv
App/gui/: ChartPreviewWindow.cpp  DistributionChartWindow.cpp  DistributionChartWindow.h  MainWindow.cpp  MainWindow.h  main.cpp
App/include/: CSV_parser.h  Cryptocurrency.h  DateTime_formatting.h  Portfolio.h
App/include/math/: numerical.h  stochastic.h
App/notebooks/: Analysis.ipynb
App/src/: Cryptocurrency.cpp  Portfolio.cpp
App/src/simulations/: PCA.cpp  monte_carlo.cpp
App/tests/: Alignment_test.cpp  Alignment_test.h  Math_test.cpp  PCA_test.cpp  PCA_test.h  test_run.cpp
PortfolioSimulator/: .clangd  CMakeLists.txt  gcc_build.sh  pyproject.toml
PortfolioSimulator/include/: Cryptocurrency.h  Portfolio.h
PortfolioSimulator/include/math/: numerical.h  stohastic.h
PortfolioSimulator/src/: Portfolio.cpp
PortfolioSimulator/src/simulations/: monte_carlo.cpp
PortfolioSimulator/tests/: Math_test.cpp  Math_test.h  Monte_Carlo_test.h  Parser_test.cpp  test_run.cpp
QuantifyRisk/: CMakeLists.txt  hello.py  pyproject.toml
QuantifyRisk/gui/: ChartPreviewWindow.cpp  ChartPreviewWindow.h  MainWindow.cpp  MainWindow.h  controller.py  gui.py  view.py
QuantifyRisk/include/: CSV_parser.h  Cryptocurrency.h  DateTime_formatting.h  Monte_Carlo.h  Portfolio.h
QuantifyRisk/include/math/: numerical.h  stohastic.h
QuantifyRisk/notebooks/: Analysis.ipynb  Untitled.ipynb
QuantifyRisk/src/: Cryptocurrency.cpp  Monte_Carlo.cpp  Portfolio.cpp  gui_handler.cpp
QuantifyRisk/src/math/: numerical.cpp
QuantifyRisk/src/simulations/: monte_carlo.cpp
QuantifyRisk/tests/: Alignment_test.cpp  Alignment_test.h  Math_test.cpp  Math_test.h  Monte_Carlo_test.cpp  Parser_test.cpp  Parser_test.h  test_run.cpp
Thesis/: .conform.1080927.Zavrsni_rad.bak0  .conform.1120311.Zavrsni_rad.bak0  .conform.1132454.Zavrsni_rad.bak0  .conform.1149716.Zavrsni_rad.bak0  .conform.1154196.Zavrsni_rad.bak0  .conform.1164001.Zavrsni_rad.bak0  .conform.1335741.Zavrsni_rad.bak0  .conform.1471353.Zavrsni_rad.bak0  .conform.1476528.Zavrsni_rad.bak0  .conform.1545769.Zavrsni_rad.bak0  .conform.1568167.Zavrsni_rad.bak0  .conform.1573913.Zavrsni_rad.bak0  .conform.1588695.Zavrsni_rad.bak0  .conform.1600105.Zavrsni_rad.bak0  .conform.1800913.Zavrsni_rad.bak0  .conform.2223193.Zavrsni_rad.bak0  .conform.2232185.Zavrsni_rad.bak0  .conform.2309139.Zavrsni_rad.bak0  .conform.2332596.Zavrsni_rad.bak0  .conform.2477440.Zavrsni_rad.bak0  .conform.2483222.Zavrsni_rad.bak0  .conform.2531698.Zavrsni_rad.bak0  .conform.2552167.Zavrsni_rad.bak0  .conform.2552870.Zavrsni_rad.bak0  .conform.2677819.Zavrsni_rad.bak0  .conform.2702033.Zavrsni_rad.bak0  .conform.2719123.Zavrsni_rad.bak0  .conform.2824564.Zavrsni_rad.bak0  .conform.2845164.Zavrsni_rad.bak0  .conform.2900686.Zavrsni_rad.bak0  .conform.2957599.Zavrsni_rad.bak0  .conform.2965404.Zavrsni_rad.bak0  .conform.2976586.Zavrsni_rad.bak0  .conform.3003565.Zavrsni_rad.bak0  .conform.3075541.Zavrsni_rad.bak0  .conform.3126462.Zavrsni_rad.bak0  .conform.3183726.Zavrsni_rad.bak0  .conform.3204822.Zavrsni_rad.bak0  .conform.3276203.Zavrsni_rad.bak0  .conform.3289394.Zavrsni_rad.bak0  (+130 more)
