[project]
name = "quantifyrisk"
version = "0.1.0"
description = "GUI za Monte Carlo simulaciju s PyQt6 i C++ backendom"
authors = [{ name = "Ivan Džanija" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pybind11>=2.13.6",
    "pyqt6>=6.9.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
]
